--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,7 +1,6 @@
-
-
-    <p class="bg-danger">Welcome to Tim's  app</p>
-    Here is my <a href="/bio">bio</a>
-    <br>
-    <a href="/simpleform">go to simple form</a>
-
+<p class="bg-danger">Welcome to Tim's app</p>
+Here is my <a href="/bio">bio</a>
+<br>
+<a href="/simpleform">go to simple form</a>
+<br>
+<a href="/dist">go to distance calculator</a>
