--- a/app/views/showRepos.ejs
+++ b/app/views/showRepos.ejs
@@ -3,6 +3,7 @@
 <table class="table table-bordered table-striped">
     <thead>
         <th>name</th>
+        <th>link</th>
     </thead>
     <tbody>
         <% for(repo of repos){%>
@@ -12,7 +13,7 @@
                 </td>
                 <td>
                     <a class="link-primary text-decoration-none" href="<%= repo.html_url %>">
-                        <%= repo.html_url %>
+                        <%= repo.full_name %>
                     </a>
                 </td>
             </tr>
