--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -8,4 +8,5 @@
     <a href = /bmi> go to BMI calculator</a>
     <br>
     <a href = /dist> go to distance calculator</a>
-
+    <br>
+    <a href = /meals> go to meal getter</a>
