--- a/app/views/exam6.ejs
+++ b/app/views/exam6.ejs
@@ -2,8 +2,8 @@
 <hr>
 <% for(report of reports){%>
 <h1>Bug Report:</h1>
-<p><%= report.shortdesc %></p>
-<p class="fst-italic"><%= report.longdesc %></p>
+<%= report.shortdesc %><br>
+<span class="fst-italic"><%= report.longdesc %></span>
 <hr>
 <% } %> 
 <h1>Add bug report</h1>
